Fixed fonts, size and spacing, and headers

--- a/static/global.css
+++ b/static/global.css
@@ -1,9 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=Bellefair|Charm|Cormorant+Infant:600,600i&display=swap');
+
 body {
 	margin: 0;
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	font-size: 14px;
+	font-family: Bellefair, serif;
+	font-size: 18px;
 	line-height: 1.5;
 }
+@media (min-width: 420px) { body { font-size: 20px; } }
+@media (min-width: 540px) { body { font-size: 22px; } }
+@media (min-width: 700px) { body { font-size: 24px; } }
+@media (min-width: 840px) { body { font-size: 26px; } }
+@media (min-width: 1000px) { body { font-size: 28px; } }
+@media (min-width: 1260px) { body { font-size: 32px; } }
+@media (min-width: 1390px) { body { font-size: 34px; } }
+@media (min-width: 1990px) { body { font-size: 42px; } }
+@media (min-width: 2790px) { body { font-size: 53px; } }
+@media (min-width: 3190px) { body { font-size: 59px; } }
+@media (min-width: 3590px) { body { font-size: 64px; } }
+@media (min-width: 3990px) { body { font-size: 70px; } }
 
 .theme-white, .theme-white div.menu, .theme-white div.settings {
 	background: white;
@@ -20,10 +34,13 @@ body {
 	color: white;
 }
 
+.pretext, .italic { font-family: Charm, cursive; font-size: 80%; }
+.exhort { font-family: "Cormorant Infant", serif; font-weight: 600; text-transform: uppercase; }
+
 h1, h2, h3, h4, h5, h6 {
-	margin: 2em 0 1.2em;
+	margin: 1.5em 0 .8em;
 	font-weight: 400;
-	line-height: 1.2;
+	line-height: 1.2em;
 	opacity: .7;
 }
 h2.section {
@@ -42,10 +59,3 @@ a {
 .text-center {text-align:center;}
 .opacity-75 {opacity:.75}
 .mx-auto { margin-left: auto; margin-right: auto; }
-.italic { font-style: italic; }
-
-@media (min-width: 400px) {
-	body {
-		font-size: 16px;
-	}
-}
